--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^8.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.1",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
